--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,13 +4,13 @@
 	"dockerFile": "../Dockerfile",
 	"remoteUser": "developer",
 	"mounts": [
-		"source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
+		//"source=/dev/bus/usb,target=/dev/bus/usb,type=bind"
 	],
 	"settings": {
 		"terminal.integrated.shell.linux": null
 	},
 	"runArgs": ["--privileged"],
-	"extensions": ["dart-code.flutter"],
+	"extensions": ["dart-code.flutter", "dart-code.dart-code", "vscjava.vscode-java-pack"],
 	"workspaceMount": "source=${localWorkspaceFolder}/workspace,target=/home/developer/workspace,type=bind,consistency=delegated",
 	"workspaceFolder": "/home/developer/workspace"
 }
