--- a/workspace/conduit/pubspec.yaml
+++ b/workspace/conduit/pubspec.yaml
@@ -23,17 +23,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  aad_oauth: "^0.2.0"
     
   #flutter_sound: ^7.4.13+3
   js: any
   http: ^0.12.2
-  mp_chart: ^0.1.5
-  provider: ^4.0.2
-  get_it: ^3.1.0
+  mp_chart: ^0.3.1
+  provider: ^5.0.0
+  get_it: ^7.1.3
   retrofit: any
   logger: any 
   import_js_library: ^1.0.2
-  json_annotation: ^3.0.0
+  json_annotation: ^4.0.1
   dio: ^3.0.10
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,7 +50,7 @@ dev_dependencies:
   build_web_compilers: ^2.12.0  
   build_runner: ^1.6.2
   retrofit_generator: any
-  json_serializable: ^3.2.0
+  json_serializable: ^4.0.3
   
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
