--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -1,50 +1,61 @@
 {
     "routes": [
-      {
-        "route": "/admin/*",
-        "allowedRoles": ["administrator"]
-      },
-      {
-        "route": "/api/*",
-        "methods": ["GET"],
-        "allowedRoles": ["registeredusers"]
-      },
-      {
-        "route": "/api/*",
-        "allowedRoles": ["authenticated"]
-      },
-      {
-        "route": "/login",
-        "rewrite": "/.auth/login/aad"
-      },
-      {
-        "route": "/logout",
-        "redirect": "/.auth/logout"
-      }
+        {
+            "route": "/",
+            "allowedRoles": [
+                "authenticated"
+            ]
+        },
+        {
+            "route": "/api/*",
+            "methods": [
+                "GET"
+            ],
+            "allowedRoles": [
+                "registeredusers"
+            ]
+        },
+        {
+            "route": "/api/*",
+            "allowedRoles": [
+                "authenticated"
+            ]
+        },
+        {
+            "route": "/login",
+            "rewrite": "/.auth/login/aad"
+        },
+        {
+            "route": "/logout",
+            "redirect": "/.auth/logout"
+        }
     ],
     "navigationFallback": {
-      "rewrite": "index.html",
-      "exclude": ["/images/*.{png,jpg,gif}", "/css/*"]
+        "rewrite": "index.html",
+        "exclude": [
+            "/images/*.{png,jpg,gif}",
+            "/css/*"
+        ]
     },
     "responseOverrides": {
-      "400": {
-        "rewrite": "/invalid-invitation-error.html"
-      },
-      "401": {
-        "redirect": "/login",
-        "statusCode": 302
-      },
-      "403": {
-        "rewrite": "/custom-forbidden-page.html"
-      },
-      "404": {
-        "rewrite": "/404.html"
-      }
+        "400": {
+            "rewrite": "/invalid-invitation-error.html"
+        },
+        "401": {
+            "redirect": "/login",
+            "statusCode": 302
+        },
+        "403": {
+            "rewrite": "/custom-forbidden-page.html"
+        },
+        "404": {
+            "rewrite": "/404.html"
+        }
     },
     "globalHeaders": {
-      "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline'; object-src 'none'"
+        "content-security-policy": "default-src https: ; object-src 'none'"
     },
     "mimeTypes": {
-      ".json": "text/json"
+        ".json": "text/json"
     }
-  }
+}
