--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -51,7 +51,7 @@
         }
     },
     "globalHeaders": {
-        "content-security-policy": "default-src https: ; object-src 'none'"
+        "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline' ; object-src 'none'"
     },
     "mimeTypes": {
         ".json": "text/json"
