--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -51,7 +51,7 @@
         }
     },
     "globalHeaders": {
-        "content-security-policy": "default-src https: 'unsafe-eval' 'unsafe-inline' ; object-src 'none'; worker-src blob:" 
+        "content-security-policy": "script-src https://cdn.jsdelivr.net/npm/microsoft-cognitiveservices-speech-sdk@latest/distrib/browser/microsoft.cognitiveservices.speech.sdk.bundle-min.js 'self' ; connect-src wss: https:; default-src https:  'unsafe-eval' 'unsafe-inline' ; object-src 'none'; worker-src 'self'" 
     },
     "mimeTypes": {
         ".json": "text/json"
