--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -24,7 +24,7 @@
         },
         {
             "route": "/login",
-            "rewrite": "/.auth/login/aad?post_login_redirect_uri=https://authkey.developer.azure-api.net/signin-oauth/code/callback/oauthsoundkey"
+            "rewrite": "/.auth/login/aad"
         },
         {
             "route": "/logout",
