--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -13,7 +13,7 @@
                 "GET"
             ],
             "allowedRoles": [
-                "registeredusers"
+                "authenticated"
             ]
         },
         {
