--- a/workspace/conduit/pubspec.yaml
+++ b/workspace/conduit/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   import_js_library: ^1.0.2
   json_annotation: ^4.0.1
   dio: ^3.0.10
-
+  url_launcher: ^6.0.7
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
