--- a/workspace/conduit/pubspec.yaml
+++ b/workspace/conduit/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_markdown: ^0.6.6
+  easy_web_view: ^1.4.0-nullsafety
+  bottom_bar_with_sheet: ^2.0.1
 
 dev_dependencies:
 
