My First Commit!
Wow I feel so productive.

--- a/corvox601/.obsidian/app.json
+++ b/corvox601/.obsidian/app.json
@@ -3,7 +3,8 @@
   "strictLineBreaks": true,
   "showFrontmatter": true,
   "spellcheckDictionary": [
-    "crypto"
+    "crypto",
+    "Blockchain"
   ],
   "promptDelete": false,
   "alwaysUpdateLinks": true
