--- a/workspace/conduit/pubspec.yaml
+++ b/workspace/conduit/pubspec.yaml
@@ -91,6 +91,18 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
   assets:
     - assets/
+    - assets/Img-Aaron.jpg
+    - assets/Img-Alex.jpg
+    - assets/Img-Ander.jpg
+    - assets/Img-Andrew.jpg
+    - assets/Img-Fortunato.jpg
+    - assets/Img-Frank.jpg
+    - assets/Img-Hans.jpg
+    - assets/Img-Luni.jpg
+    - assets/Img-Monkia.jpg
+    - assets/Img-Sanjay.jpg
+    - assets/Img-Sharon.jpg
+    - assets/Img-Tawanda.jpg
     - manifest.json
     
   fonts:
