--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -3,9 +3,8 @@
         {
             "route": "/",
             "allowedRoles": [
-                "authenticated",
-                "anonymous"
-            ]
+                "authenticated"
+                        ]
         },
         {
             "route": "/api/*",
