--- a/workspace/conduit/staticwebapp.config.json
+++ b/workspace/conduit/staticwebapp.config.json
@@ -41,10 +41,10 @@
         "400": {
             "rewrite": "/invalid-invitation-error.html"
         },
-        "401": {
-            // "redirect": "/login",
-            "statusCode": 302
-        },
+        // "401": {
+        //     // "redirect": "/login",
+        //     "statusCode": 302
+        // },
         "404": {
             "rewrite": "/404.html"
         }
